# kaitian

./: .dockerignore  .env.docker  .env.example  .env.startup  .gitignore  .gitmodules  AGENTS.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_GUIDE.md  INIT_SUMMARY.md  POSTIZ_IMPLEMENTATION_SUMMARY.md  README.md  STARTUP_INDEX.md  UPDATE_SUMMARY.md  docker-compose.yml  kaitian.toml  main.py  package-lock.json  pyproject.toml  requirements.txt  setup.sh  start.py  start.sh  traffic.jsonl
.opencode/skills/3dbrute-model-loader/: SKILL.md
.opencode/skills/3dbrute-model-loader/reference/: download.md  extraction.md  troubleshooting.md  workflow.md
.opencode/skills/auth-cookie-import/: SKILL.md
.opencode/skills/browseros-launcher/: SKILL.md
.opencode/skills/kaitian-record-manager/: SKILL.md
.opencode/skills/kaitian-record-manager/reference/: workflow.md
.opencode/skills/mitmproxy-traffic-monitor/: SKILL.md
.opencode/skills/mitmproxy-traffic-monitor/scripts/: proxy_manager.ps1  znzmo_sniffer.py
.opencode/skills/znzmo-model-uploader/: SKILL.md
.sisyphus/: boulder.json
.sisyphus/evidence/: final-test-results.json  task-4-tieba-search.json
.sisyphus/notepads/tieba-search-fix/: task1.md  task2-3.md  task4.md
.sisyphus/plans/: tieba-search-fix.md
.sisyphus/plans/wait-logic-migration/: report.md
.sisyphus/plans/wait-logic-refactor/: report.md
.sisyphus/reports/: 3dbrute-stealth-fix.md
app/: __init__.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  app.py  config.py  database.py  logging.py
app/integrations/: __init__.py  crawl4ai_client.py  media_crawler_client.py  postiz_client.py
app/models/: __init__.py  db.py  schemas.py
app/services/: __init__.py  ai_service.py  content_generation.py  database_service.py  keyword_service.py  langchain_agent.py  notification_service.py  prompt_templates.py  publisher_service.py  social_media_crawler.py  social_media_service.py  state_store.py  tieba_crawler.py  tieba_publisher.py  xiaohongshu_publisher.py
app/services/auth/: __init__.py  login_manager.py
app/utils/: __init__.py
apps/api/: README.md  pyproject.toml
apps/api/src/api/: __init__.py  dependencies.py  main.py  models.py
apps/api/src/api/routers/: __init__.py  health.py
apps/api/tests/: test_api.py
apps/cli/: README.md  pyproject.toml
apps/cli/src/cli/: __init__.py  main.py
apps/cli/src/cli/commands/: __init__.py  auth.py  crawl.py  hello.py  publish.py  record.py
apps/cli/tests/: test_cli.py
cookies/: 3dbrute.com.txt  znzmo.com.txt
docs/: DATABASE_CRAWLER_INTEGRATION.md  DOCKER_DEPLOYMENT.md  LANGCHAIN_INTEGRATION.md  N8N_INTEGRATION.md  NEW_WORKFLOW_DESIGN.md  POSTIZ_INTEGRATION.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  STARTUP_GUIDE.md  STARTUP_SCRIPTS.md  SYSTEM_DESIGN.md
docs/architecture/: anti-detection-design.md  cloudflare-solution-feasibility.md  project-structure.md
docs/superpowers/plans/: 2026-05-10-batch-crawler.md  2026-05-10-langchain-agent.md
docs/superpowers/specs/: 2026-05-10-batch-crawler-design.md  2026-05-10-langchain-agent-design.md
scripts/: traffic_recorder.py
tests/: test_tieba_crawler.py  test_tieba_publisher.py  test_xiaohongshu_publisher.py
