[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaitian"
version = "0.1.0"
description = "AI 营销自动化引擎 - 关键词宇宙到 LihuApp 手机审核完整闭环"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0",
    "python-json-logger>=2.0.0",
    
    # LangChain & AI
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    
    # Web Crawling
    "crawl4ai>=0.8.0",
    "playwright>=1.40.0",
    
    # Optional: Redis
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_unused_ignores = true