[project]
name = "kaitian"
version = "0.1.0"
description = "模块化自动化采集与搬运工具集"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cli",
    "oss2>=2.19.1",
    "pillow>=12.2.0",
]
license = { text = "MIT" }
authors = [
    { name = "KaiTian Team" }
]
keywords = ["automation", "scraping", "downloader", "publisher"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/kaitian-team/kaitian"
Repository = "https://github.com/kaitian-team/kaitian"
Documentation = "https://github.com/kaitian-team/kaitian/docs"

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
core = { workspace = true }
auth = { workspace = true }
agent = { workspace = true }
browser = { workspace = true }
stealth = { workspace = true }
captcha = { workspace = true }
downloader = { workspace = true }
validator = { workspace = true }
publisher = { workspace = true }
cli = { workspace = true }
api = { workspace = true }
sites = { workspace = true }

# Development dependencies (shared across workspace)
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
    "mitmproxy>=11.1.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests", "packages/*/tests", "apps/*/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["packages", "apps"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


