[project]
name = "cli"
version = "0.1.0"
description = "KaiTian 命令行工具"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "core",
    "auth",
    "browser",
    "downloader",
    "validator",
    "publisher",
]

[project.scripts]
kaitian = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"